Fixed typos and alt text

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/iphone-1.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/iphone-1.png" alt="MyTee Ninja iPhone app screenshot"></div>
 					    </div>
 
 		    		</div>
@@ -132,13 +132,13 @@
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">Simple. Fast. Intuitive</h1>
-									<h2 class="fh5co-sub-lead to-animate">Whether you want to whip up something in 5 mins or spend 5 days. Out smart and intuitive tools have you covered.</h2>
+									<h2 class="fh5co-sub-lead to-animate">Whether you want to whip up something in 5 mins or spend 5 days. Our smart and intuitive tools have you covered.</h2>
 									<p class="to-animate-2"><a href="http://www.itunes.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-apple"></i> App Store</a>&nbsp;&nbsp; <a href="http://play.google.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-android"></i> Play Store</a></p>
 						    	</div>
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/android-1.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/android-1.png" alt="MyTee Ninja Android app screenshot"></div>
 					    </div>
 
 		    		</div>
@@ -199,7 +199,7 @@
 					<div class="box to-animate">
 						<div class="icon colored-5"><span><i class="icon-rocket"></i></span></div>
 						<h3>Fast</h3>
-						<p>Our automated procesess and best-in-class shipping partners ensure that you get your hands on your designs in the shortest time.</p>
+						<p>Our automated processes and best-in-class shipping partners ensure that you get your hands on your designs in the shortest time.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -510,7 +510,7 @@
             </div>
             <div class="faq-accordion to-animate">
                 <span class="faq-accordion-icon-toggle"><i class="icon-arrow-down"></i></span>
-                <h3>Canellation Policy</h3>
+                <h3>Cancellation Policy</h3>
                 <div class="faq-body">
                     <p>In order to get your order delivered to you soon, we print the orders same day. As long as your order has not been processed, we can cancel it and refund your amount. Please get in touch with our customer support team to cancel your order. The refund will be initiated in the form of voucher that will be emailed to you immediately. However, the cancellation of orders will be done only if they are respected to below listed terms and conditions:<br>You can cancel your orders within one hour of booking the same order. You are requested to immediately email at <a href="mailto://support@myteeninja.com">support@myteeninja.com</a> or call at <a href="tel://+919833101661">(+91) 98331 01661</a> along with your order number for any cancellations to be made.<br>&nbsp;<br>Your orders can also be cancelled if MyTee Ninja team finds your payments have not been received. Check below for further details:<br>Non receipt of Payment- In case the payment for the order is not made MyTee Ninja will automatically cancel the order. An email notification is sent to you when we cancel the order.</p>
                 </div>
