--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Think. Create. Wear.</h1>
+						    		<h1 class="fh5co-lead to-animate">Coming Soon!</h1><br />
+									<h1 class="fh5co-lead to-animate">Think. Create. Wear.</h1>
 									<h2 class="fh5co-sub-lead to-animate">Create your own personalised T-shirts. Unique. Just like you!</h2>
 									<p class="to-animate-2"><a href="http://www.itunes.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-apple"></i> App Store</a>&nbsp;&nbsp; <a href="http://play.google.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-android"></i> Play Store</a></p>
 						    	</div>
@@ -131,6 +132,7 @@
 		    			<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
+									<h1 class="fh5co-lead to-animate">Coming Soon!</h1><br />
 						    		<h1 class="fh5co-lead to-animate">Simple. Fast. Intuitive</h1>
 									<h2 class="fh5co-sub-lead to-animate">Whether you want to whip up something in 5 mins or spend 5 days. Out smart and intuitive tools have you covered.</h2>
 									<p class="to-animate-2"><a href="http://www.itunes.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-apple"></i> App Store</a>&nbsp;&nbsp; <a href="http://play.google.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-android"></i> Play Store</a></p>
@@ -152,8 +154,8 @@
 		    			<div class="col-md-8 col-md-offset-2 text-center">
 		    				<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-		    						<h1 class="fh5co-lead to-animate">Grab it now for free!</h1>
-									<h2 class="fh5co-sub-lead to-animate">Let's get started.</h2>
+		    						<h1 class="fh5co-lead to-animate">Coming Soon!</h1><br />
+									<!--<h2 class="fh5co-sub-lead to-animate">Let's get started.</h2>-->
 									<p class="to-animate-2"><a href="http://www.itunes.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-apple"></i> App Store</a>&nbsp;&nbsp; <a href="http://play.google.com" target="_blank" class="btn btn-primary btn-lg"><i class="icon-android"></i> Play Store</a></p>
 								</div>
 							</div>
